###### TWE 4.8-1 RELEASED ######
2012-10-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved GUI for SubFlow activity modeling (actual->formal parameters)

2012-10-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Email configuration section for workflow process element (used with SMTPEventAuditManager). Nice GUI and XPDL validation.

2012-10-17 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to all panels to display tooltip
   # Shark mode: Improved GUI for TaskApplication activity modeling (actual->formal parameters)

2012-10-12 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Introduced validation for Application definitions depending on ToolAgentClass extended attribute value (Shark tool agent dependent validation)
      - Improved GUI (dynamic panel for LDAP and UserGroup tool agents, choice dependent panel logic for Quartz and Scheduler tool agents)
   
2012-10-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved GUI for Application definitions

2012-10-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation. Now when validating special extended attributes (for client GUI forms and for SMTPEventAuditManager), 
     "NON_EXISTING_VARIABLE_REFERENCE" ERRORS are considered WARNINGS if there is an extended attribute at WorkflowProcess/Package level that 
     allows undefined variables (Formal/Actual parameter matching validation still considers such cases an ERROR cases)

2012-10-03 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Email configuration section for manual activity elements (used with SMTPEventAuditManager). Nice GUI and XPDL validation.
   # Added new actions to start and stop design time XPDL validation (useful to stop it when dealing with big XPDLs)
   # Enhanced XMLMultiLineTextPanelWithChoiceButton and XMLMultiLineHighlightPanelWithChoiceButton GUI controls
   # Improved ProblemsNavigator
   
2012-10-02 Sasa Bojanic <sasaboy@together.at>