@@ -10091,7 +10091,7 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         <listitem>
           <para>Shark mode: Email configuration section for manual activity
           element and workflow process element (used with
-          SMTPEventAuditManager). Nice GUI and XPDL validation.</para>
+          SMTPEventAuditManager). Nice GUI and XPDL validation. Tooltip information provided.</para>
         </listitem>
 
         <listitem>
