@@ -1,4 +1,7 @@
 ###### TWE 4.8-1 RELEASED ######
+2012-10-19 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: Tooltip information provided for activity's email configuration (Shark's SMTPEventAuditManager related) 
+
 2012-10-18 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: Improved GUI for SubFlow activity modeling (actual->formal parameters)
 
